--- a/index.html
+++ b/index.html
@@ -9,17 +9,8 @@
 
   <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 
-  <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.css">
-  <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap-theme.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="libs/angularjs/angular-csp.css">
-  <script src="libs/angularjs/angular.js" type="text/javascript" charset="utf-8"></script>
-  <script src="libs/angular-hotkeys/build/hotkeys.js" type="text/javascript" charset="utf-8"></script>
-  <script src="src/app.js" type="text/javascript" charset="utf-8"></script>
-  <script src="src/services.js" type="text/javascript" charset="utf-8"></script>
-  <script src="src/add.js" type="text/javascript" charset="utf-8"></script>
-  <script src="src/torrent.js" type="text/javascript" charset="utf-8"></script>
-  <script src="src/links.js" type="text/javascript" charset="utf-8"></script>
+  <link rel="stylesheet" href="style.css">
+  <script src="bundle.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body ng-controller="BodyController">
   <div class="container">
