index.html has been split in multiple files similar to code

--- a/index.html
+++ b/index.html
@@ -12,299 +12,12 @@
   <link rel="stylesheet" href="style.css">
   <script src="bundle.js" type="text/javascript" charset="utf-8"></script>
 </head>
-<body ng-controller="BodyController">
+<body>
   <div class="container">
-    <div class="navbar navbar-default" role="navigation">
-      <div class="navbar-collapse">
-        <!-- Navbar links -->
-        <ul class="nav navbar-nav">
-          <li class="desktop">
-            <a>Alldebrid</a>
-          </li>
-          <li ng-class="{ active: showLinks }">
-            <a ng-class="{ 'pointer': paid, 'denied': !paid }" ng-click="paid ? showLinks = !showLinks : null">Unrestricted Links</a>
-          </li>
-          <li ng-class="{ active: showTorrents }">
-            <a ng-class="{ 'pointer': paid, 'denied': !paid }" ng-click="paid ? showTorrents = !showTorrents : null">Add Torrent</a>
-          </li>
-        </ul>
-        <!-- right side of the navbar -->
-        <!-- login form -->
-        <form class="navbar-form navbar-right" name="loginForm" role="login" ng-submit="loginUser()" ng-show="loginStatus === 'anon'">
-          <div class="form-group">
-            <label class="label label-danger blink pointer" ng-show="recaptchaWarning" title="you tried too many times to login, please wait several minutes before retrying.">Recaptcha Appeared</label>
-            <label class="label label-danger blink" ng-show="loginFailed">Login failed</label>
-            <label ng-hide="loginFailed">Login</label>
-            <input type="text" class="form-control" ng-model="login.username" name="username" placeholder="Username" autofocus>
-          </div>
-          <div class="form-group">
-            <input type="password" class="form-control" ng-model="login.password" name="password" placeholder="Password">
-          </div>
-          <button type="submit" class="btn btn-default hidden-devices" ng-disabled="loginStatus === 'working'">Login <i class="fa" ng-class="loginStatus === 'working' ? 'fa-cog fa-spin' : 'fa-sign-in'"></i></button>
-        </form>
-
-        <!-- Spinner -->
-        <button class="btn btn-default navbar-btn navbar-right" ng-show="loginStatus === 'working'">
-          <span>allDebrid login</span>
-          <span class="glyphicon glyphicon-refresh glyphicon-spin"></span>
-        </button>
-
-        <!-- Logout Form -->
-        <form class="navbar-form navbar-right" role="logout" ng-submit="logoutUser()" ng-show="loginStatus === 'login'">
-          <div class="form-group">
-            <span>
-              <span class="glyphicon glyphicon-user"></span>
-              <span class="right-spacer">{{ username }}</span>
-              <span ng-show="paid">
-                <span class="glyphicon glyphicon-time"></span>
-                <span class="text-success desktop">remaining days: {{ remainingDays }}</span>
-                <span class="text-success mobile">days: {{ remainingDays }}</span>
-              </span>
-              <span ng-show="!paid">
-                <span class="text-error">No paid days left, <a href="http://www.alldebrid.com/offer/" target="_blank">renew</a> to use this application</span>
-              </span>
-              <button type="submit" class="btn btn-link btn-lg mobile">Logout <span class="glyphicon glyphicon-log-out"></span></button>
-            </span>
-          </div>
-          <div class="form-group desktop">
-            <button type="submit" class="btn btn-default">Logout <span class="glyphicon glyphicon-log-out"></span></button>
-          </div>
-        </form>
-      </div>
-    </div>
-
-    <div class="showLinks" ng-show="showLinks" ng-controller="LinksController">
-      <div class="row">
-        <div class="col-md-12">
-          <form role="form">
-            <div class="form-group">
-              <label>Links to request</label>
-              <span>use one link per line, newline is <b>required</b> between them</span>
-              <textarea class="form-control long-text" placeholder="place links here" autofocus ng-model="requestedLinks"></textarea>
-            </div>
-            <div class="form-group" ng-show="displayMode === 'textarea'">
-              <label>Unrestricted links</label>
-              <textarea class="form-control long-text" placeholder="requested links will get converted and put here..." autofocus ng-model="unrestrictedLinks"></textarea>
-            </div>
-            <div class="form-group" ng-show="displayMode === 'clickable'">
-              <div ng-repeat="(linkName, linkList) in clickableLinks">
-                <div class="alert alert-success" role="alert">
-                  {{ linkName }}
-                </div>
-                <ul class="list-group">
-                  <li class="list-group-item" ng-class="{ 'list-group-item-danger': link.error }" ng-repeat="link in linkList">
-                    <span class="badge" title="{{ link.error }}" ng-show="link.error">hover for error</span>
-                    <a href="{{ link.link }}" target="_blank" ng-show="link.filename">{{ link.filename }}</a>
-                    <a href="{{ link.link }}" target="_blank" ng-show="!link.filename">{{ link.link }}</a>
-                    <a href="link.streaming" target="_blank" ng-show="!!link.streaming.length">{{ link.streaming }}</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="form-group text-center">
-              <label class="radio-inline">
-                <input type="radio" value="clickable" ng-model="displayMode">Clickable
-              </label>
-              <label class="radio-inline">
-                <input type="radio" value="textarea" ng-model="displayMode">Textarea
-              </label>
-              <button class="btn btn-lg"
-                ng-class="{ 'btn-default': !generatingLinks, 'btn-success': generatingLinks }" ng-click="unrestrictLinks()" ng-disabled="generatingLinks">
-                Unrestrict links <span class="glyphicon glyphicon-refresh glyphicon-spin" ng-show="generatingLinks"></span>
-              </button>
-              <div class="desktop">
-                <button class="btn btn-lg btn-danger" ng-click="clearLinks()" ng-disabled="generatingLinks">
-                  Clear <span class="glyphicon glyphicon-remove"></span>
-                </button>
-                <button class="btn btn-lg btn-warning" ng-click="$parent.showLinks = false">
-                  Close <span class="glyphicon glyphicon-eject"></span>
-                </button>
-              </div>
-            </div>
-            <!-- close buttons are split in mobile -->
-            <div class="form-group text-center mobile">
-              <button class="btn btn-lg btn-danger" ng-click="clearLinks()" ng-disabled="generatingLinks">
-                Clear <span class="glyphicon glyphicon-remove"></span>
-              </button>
-              <button class="btn btn-lg btn-warning" ng-click="$parent.showLinks = false">
-                Close <span class="glyphicon glyphicon-eject"></span>
-              </button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-
-    <div class="showTorrents" ng-show="showTorrents" ng-controller="AddController">
-      <div class="row">
-        <div class="col-md-12">
-          <form role="form">
-            <div class="form-group">
-              <label>Add Magnet single/multiple:</label>
-              <span>use one magnet per line, newline is <b>required</b> between them</span>
-              <textarea class="form-control long-text" placeholder="add magnets here" autofocus ng-model="magnetText" ng-disabled="addingTorrents"></textarea>
-            </div>
-            <div class="form-group text-center">
-              <button class="btn btn-lg"
-                ng-class="{ 'btn-default': !addingTorrents, 'btn-success': addingTorrents }" ng-disabled="addingTorrents" ng-click="addMagnets()">
-                Add Magnets <span class="glyphicon glyphicon-refresh glyphicon-spin" ng-show="addingTorrents"></span>
-              </button>
-              <button class="btn btn-lg btn-danger" ng-click="clearMagnets()" ng-disabled="addingTorrents">
-                Clear <span class="glyphicon glyphicon-remove"></span>
-              </button>
-              <button class="btn btn-lg btn-warning" ng-click="$parent.showTorrents = false">
-                Close <span class="glyphicon glyphicon-eject"></span>
-              </button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-
-    <div ng-show="loginStatus === 'login'" ng-controller="TorrentController">
-      <div class="row">
-        <div class="col-md-8">
-          <form class="form-inline">
-            <div class="checkbox desktop">
-              <span>Forever </span><input type="checkbox" ng-model="forever" ng-click="checkForever()">
-            </div>
-            <div class="form-group desktop">
-              <select ng-model="cooldown">
-                <option value="30000">30 sec</option>
-                <option value="15000">15 sec</option>
-                <option value="10000">10 sec</option>
-                <option value="5000">5 sec</option>
-              </select>
-            </div>
-            <div class="form-group desktop">
-              <button class="btn btn-xs btn-danger" ng-disabled="!checkedTorrents.length || removing" ng-click="removeChecked()">
-                remove selected <span class="glyphicon glyphicon-refresh glyphicon-spin" ng-show="removing"></span>
-              </button>
-              <button class="btn btn-xs btn-info" ng-disabled="!checkedTorrents.length" ng-click="generateLinks()">generate links</button>
-              <button class="btn btn-xs btn-default" ng-disabled="!checkedTorrents.length" ng-click="deselect()">clear selection</button>
-            </div>
-            <div class="form-group mobile">
-              <button class="btn btn-lg btn-danger" ng-disabled="!checkedTorrents.length || removing" ng-click="removeChecked()">
-                remove <span class="glyphicon glyphicon-refresh glyphicon-spin" ng-show="removing"></span>
-              </button>
-              <button class="btn btn-lg btn-info" ng-disabled="!checkedTorrents.length" ng-click="generateLinks()">generate links</button>
-              <button class="btn btn-lg btn-default" ng-disabled="!checkedTorrents.length" ng-click="deselect()">deselect all</button>
-            </div>
-          </form>
-        </div>
-        <div class="col-md-2">
-          <span class="pull-right" ng-show="torrentStatus === 'working'">Updating <span class="glyphicon glyphicon-refresh glyphicon-spin"></span></span>
-        </div>
-        <div class="col-md-2">
-          <span class="pull-right" ng-show="!!torrents.length">{{ torrents.length }} torrents</span>
-        </div>
-      </div>
-      <div class="row" ng-show="!!torrents.length">
-        <table class="table torrents">
-          <thead>
-            <tr>
-              <th class="select"><input type="checkbox" ng-click="select()" ng-model="selectAll"></th>
-              <th class="id">
-                <a class="pointer"
-                ng-class="{ 'ordered': orderByField === 'id'}" ng-click="orderByField = 'id'; orderReversed = !orderReversed">
-                ID <span class="glyphicon"
-                    ng-class="{ 'glyphicon-chevron-down': orderReversed, 'glyphicon-chevron-up': !orderReversed }"
-                    ng-show="orderByField === 'id'"></span>
-                </a>
-              </th>
-              <th class="server">
-                <a class="pointer"
-                ng-class="{ 'ordered': orderByField === 'server'}" ng-click="orderByField = 'server'; orderReversed = !orderReversed">
-                server <span class="glyphicon"
-                    ng-class="{ 'glyphicon-chevron-down': orderReversed, 'glyphicon-chevron-up': !orderReversed }"
-                    ng-show="orderByField === 'server'"></span>
-                </a>
-              </th>
-              <th class="name">
-                <a class="pointer"
-                ng-class="{ 'ordered': orderByField === 'name'}" ng-click="orderByField = 'name'; orderReversed = !orderReversed">
-                Filename <span class="glyphicon"
-                    ng-class="{ 'glyphicon-chevron-down': orderReversed, 'glyphicon-chevron-up': !orderReversed }"
-                    ng-show="orderByField === 'name'"></span>
-                </a>
-              </th>
-              <th class="status">
-                <a class="pointer"
-                ng-class="{ 'ordered': orderByField === 'status'}" ng-click="orderByField = 'status'; orderReversed = !orderReversed">
-                status <span class="glyphicon"
-                    ng-class="{ 'glyphicon-chevron-down': orderReversed, 'glyphicon-chevron-up': !orderReversed }"
-                    ng-show="orderByField === 'status'"></span>
-                </a>
-              </th>
-              <th class="downloaded">
-                <a class="pointer"
-                ng-class="{ 'ordered': orderByField === 'downloaded'}" ng-click="orderByField = 'downloaded'; orderReversed = !orderReversed">
-                downloaded <span class="glyphicon"
-                    ng-class="{ 'glyphicon-chevron-down': orderReversed, 'glyphicon-chevron-up': !orderReversed }"
-                    ng-show="orderByField === 'downloaded'"></span>
-                </a>
-              </th>
-              <th class="size">
-                <a class="pointer"
-                ng-class="{ 'ordered': orderByField === 'size'}" ng-click="orderByField = 'size'; orderReversed = !orderReversed">
-                size <span class="glyphicon"
-                    ng-class="{ 'glyphicon-chevron-down': orderReversed, 'glyphicon-chevron-up': !orderReversed }"
-                    ng-show="orderByField === 'size'"></span>
-                </a>
-              </th>
-              <th class="seeders">
-                <a class="pointer"
-                ng-class="{ 'ordered': orderByField === 'seeders'}" ng-click="orderByField = 'seeders'; orderReversed = !orderReversed">
-                seeders <span class="glyphicon"
-                    ng-class="{ 'glyphicon-chevron-down': orderReversed, 'glyphicon-chevron-up': !orderReversed }"
-                    ng-show="orderByField === 'seeders'"></span>
-                </a>
-              </th>
-              <th class="speed">
-                <a class="pointer"
-                ng-class="{ 'ordered': orderByField === 'speed'}" ng-click="orderByField = 'speed'; orderReversed = !orderReversed">
-                speed <span class="glyphicon"
-                    ng-class="{ 'glyphicon-chevron-down': orderReversed, 'glyphicon-chevron-up': !orderReversed }"
-                    ng-show="orderByField === 'speed'"></span>
-                </a>
-              </th>
-              <th class="added_date">
-                <a class="pointer"
-                ng-class="{ 'ordered': orderByField === 'added_date'}" ng-click="orderByField = 'added_date'; orderReversed = !orderReversed">
-                date <span class="glyphicon"
-                    ng-class="{ 'glyphicon-chevron-down': orderReversed, 'glyphicon-chevron-up': !orderReversed }"
-                    ng-show="orderByField === 'added_date'"></span>
-                </a>
-              </th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr ng-repeat="torrent in torrents | orderBy:orderByField:orderReversed" ng-class="{ 'warning': torrent.checked }" ng-click="check(torrent)">
-              <td class="select"><input type="checkbox" ng-model="torrent.checked"></td>
-              <td class="id">{{ torrent.id }}</td>
-              <td class="server">{{ torrent.server }}</td>
-              <td class="name">{{ torrent.name }}</td>
-              <td class="status">{{ torrent.status }}</td>
-              <td class="downloaded">{{ torrent.downloaded }}</td>
-              <td class="size">{{ torrent.size | bytes:2 }}</td>
-              <td class="seeders">{{ torrent.seeder }}</td>
-              <td class="speed">{{ torrent.speed }}</td>
-              <td class="added_date">{{ torrent.added_date | date:'dd/MM hh:mm' }}</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="row" ng-show="(torrentStatus !== 'working' && !torrents.length) || !torrents.length">
-        <div class="col-md-12 well-sm">
-          <div class="jumbotron">
-            <h1>No torrents detected</h1>
-            <p>add your first one now</p>
-            <p><a class="btn btn-primary btn-lg" ng-click="$parent.showTorrents = true" ng-disabled="!paid">Add Torrent</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-
+    <!-- NavBarController -->
+    <!-- LinksController -->
+    <!-- AddController -->
+    <!-- TorrentController -->
   </div>
 </body>
 </html>
