experimentation at its best: breaking a perfectly working project

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="bundle.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
-  <div class="container">
+  <div class="container" ui-view>
     <!-- NavBarController -->
     <!-- LinksController -->
     <!-- AddController -->
