changed the way angular templates gets compiled, something start to work!

--- a/src/controller/home.tpl.html
+++ b/src/controller/home.tpl.html
@@ -1,5 +1,5 @@
 <div>
   <div class="navbar" ui-view="navbar"></div>
   <div class="torrents"></div>
-  <h1 class="jumbotron">{{ variable }}</h1>
+  <h1 class="jumbotron">{{ home.variable }}</h1>
 </div>
