--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <link rel="stylesheet" href="style.css">
   <script src="bundle.js" type="text/javascript" charset="utf-8"></script>
+  <script src="templates.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
   <div class="container" ui-view>
