--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 </head>
 <body>
   <div class="container" ui-view>
+    <h1>
+      <span class="glyphicon glyphicon-refresh glyphicon-spin"></span>
+      <span>loading status...</span>
+    </h1>
     <!-- NavBarController -->
     <!-- LinksController -->
     <!-- AddController -->
