gulp modified, now libraries gets copied and everything "works"

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 
   <link rel="stylesheet" href="style.css">
+  <script src="/libs/angular.js"></script>
+  <script src="/libs/angular-ui-router.js"></script>
+  <script src="/libs/angular-hotkeys.js"></script>
   <script src="bundle.js" type="text/javascript" charset="utf-8"></script>
   <script src="templates.js" type="text/javascript" charset="utf-8"></script>
 </head>
