copy-libs task now does much more, supports overrides, exclusions and additionals

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css" href="/libs/bootstrap.css">
   <script src="/libs/angular.js"></script>
   <script src="/libs/angular-ui-router.js"></script>
   <script src="/libs/angular-hotkeys.js"></script>
