--- a/src/controller/login.tpl.html
+++ b/src/controller/login.tpl.html
@@ -1,1 +1,47 @@
-<h1>This is Login State</h1>
+<div class="row">
+  <div class="col-sm-6 col-md-4 col-md-offset-4">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <strong> Log in to continue</strong>
+      </div>
+      <div class="panel-body">
+        <form role="form" ng-submit="login()">
+          <fieldset>
+            <div class="row">
+              <div class="center-block">
+                <img class="profile-img"
+                  src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120" alt="">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-12 col-md-10  col-md-offset-1">
+                <div class="form-group">
+                  <div class="input-group">
+                    <span class="input-group-addon">
+                      <i class="glyphicon glyphicon-user"></i>
+                    </span>
+                    <input class="form-control" placeholder="Username" name="loginname" type="text" autofocus>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="input-group">
+                    <span class="input-group-addon">
+                      <i class="glyphicon glyphicon-lock"></i>
+                    </span>
+                    <input class="form-control" placeholder="Password" name="password" type="password" value="">
+                  </div>
+                </div>
+                <div class="form-group">
+                  <input type="submit" class="btn btn-lg btn-primary btn-block" value="Log In">
+                </div>
+              </div>
+            </div>
+          </fieldset>
+        </form>
+      </div>
+      <div class="panel-footer">
+        Don't have an account! <span ng-click="register()"> Register </span>
+      </div>
+    </div>
+  </div>
+</div>
