--- a/src/controller/login.tpl.html
+++ b/src/controller/login.tpl.html
@@ -5,7 +5,7 @@
         <strong> Log in to continue</strong>
       </div>
       <div class="panel-body">
-        <form role="form" ng-submit="login()">
+        <form role="form" ng-submit="loginUser()">
           <fieldset>
             <div class="row">
               <div class="center-block">
@@ -20,7 +20,7 @@
                     <span class="input-group-addon">
                       <i class="glyphicon glyphicon-user"></i>
                     </span>
-                    <input class="form-control" placeholder="Username" name="loginname" type="text" autofocus>
+                    <input class="form-control" placeholder="Username" name="loginname" type="text" autofocus ng-model="login.username">
                   </div>
                 </div>
                 <div class="form-group">
@@ -28,7 +28,7 @@
                     <span class="input-group-addon">
                       <i class="glyphicon glyphicon-lock"></i>
                     </span>
-                    <input class="form-control" placeholder="Password" name="password" type="password" value="">
+                    <input class="form-control" placeholder="Password" name="password" type="password" value="" ng-model="login.password">
                   </div>
                 </div>
                 <div class="form-group">
