--- a/src/controller/torrent.tpl.html
+++ b/src/controller/torrent.tpl.html
@@ -1,4 +1,4 @@
-<div ng-show="loginStatus === 'login'" ng-controller="TorrentController">
+<div>
   <div class="row">
     <div class="col-md-8">
       <form class="form-inline">
