better spinner in homepage

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>AllDebrid Chrome App</title>
+  <title>AllDebrid Better Frontend</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -19,10 +19,16 @@
 </head>
 <body>
   <div class="container" ui-view>
-    <h1>
-      <span class="glyphicon glyphicon-refresh glyphicon-spin"></span>
-      <span>loading status...</span>
-    </h1>
+    <div class="row">
+      <div class="col-sm-6 col-md-4 col-md-offset-4">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <span class="glyphicon glyphicon-refresh glyphicon-spin"></span>
+            <strong>loading status...</strong>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- NavBarController -->
     <!-- LinksController -->
     <!-- AddController -->
