--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <script src="/libs/angular.js"></script>
   <script src="/libs/angular-ui-router.js"></script>
   <script src="/libs/angular-hotkeys.js"></script>
-  <script src="bundle.js" type="text/javascript" charset="utf-8"></script>
-  <script src="templates.js" type="text/javascript" charset="utf-8"></script>
+  <script src="bundle.js"></script>
+  <script src="templates.js"></script>
 </head>
 <body>
   <div class="container" ui-view>
     <div class="row">
-      <div class="col-sm-6 col-md-4 col-md-offset-4">
+      <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
         <div class="panel panel-default">
           <div class="panel-heading">
             <span class="glyphicon glyphicon-refresh glyphicon-spin"></span>
