navbar working, login/logout fixed

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script src="templates.js"></script>
 </head>
 <body>
+  <div ui-view="navbar"></div>
   <div class="container" ui-view>
     <div class="row">
       <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
